# CProjectWithTests_pytest

./: build.bat
.github/workflows/: ci.yml
calculator/: CMakeLists.txt
calculator_tests/: quick_test.bat
